tests/bad_dataflow_2.out
STDOUT:

STDERR:
CFG lowering error in function main: MalformedPhiInfo(MalformedPhiInfo { infos: [], malformed_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(0), dest_val: ValueRef(1, 43..44, None), assigned_val: _VarId(VarId(0)) }] })
error: Use before initialization detected during CFG lowering
  ┌─ tests/bad_dataflow_2.c:4:12
  │
3 │     int x;
  │         - Variable declaration site
4 │     return x;
  │            ^ value not valid (not yet initialized)
  │
  = note: this means that you are trying to use a variable that has not been assigned a value yet

Error: CFG lowering failed
